# summer-jam

./: .gitattributes  .gitignore  Cargo.toml  README.md
.cargo/: config_fast_builds
.github/workflows/: ci.yaml  release.yml
assets/: cover.ase
assets/audios/: bounce.flac  explosion.flac  hit.flac  lose.flac  miss.flac
assets/shaders/: background.wgsl
src/: .gitattributes  background.rs  config.rs  constants.rs  lib.rs  loading.rs  main.rs  main_menu.rs  menu.rs  player.rs  score.rs  title.rs  utility.rs  utils.rs
src/game/: ball.rs  base.rs  battle.rs  effects.rs  enemy.rs  hint.rs  mod.rs  paddle.rs  physics.rs  player.rs  practice.rs  prelude.rs  rigid_body.rs  slits.rs  story.rs
src/shaders/: background.wgsl
src/states/: game.rs  mod.rs  prelude.rs  score.rs  title.rs  win.rs
src/utils/: collide.rs  damp.rs  interpolation.rs  mod.rs
wasm/: index.html
