[package]
name = "bounce-up"
version = "1.4.3"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "bounce-up-bin"
path = "src/main.rs"

[features]
dot = []

[dependencies]
fastrand = "1.7"
itertools = "0.10"
wasm-bindgen = "0.2"
bevy = { version = "0.8", default-features = false, features = [
    "bevy_winit",
    "render",
    "png",
    "x11",
] }
bevy_kira_audio = { git = "https://github.com/NiklasEi/bevy_kira_audio", branch = "main", features = [
    "wav",
    "flac",
    "ogg"
] }
